--- a/GoBoken/Main.storyboard
+++ b/GoBoken/Main.storyboard
@@ -59,8 +59,15 @@
                                     <segue destination="EBI-hF-E3g" kind="show" id="fp3-MB-rG2"/>
                                 </connections>
                             </barButtonItem>
+                            <barButtonItem title="Item" image="user-25" width="1" id="wpp-Ag-KJt">
+                                <inset key="largeContentSizeImageInsets" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
+                                <connections>
+                                    <action selector="UserBtnClicked:" destination="Qrd-3H-gtQ" id="oRC-fE-WSz"/>
+                                    <segue destination="WrQ-jM-IDg" kind="show" id="f7h-R0-Z7p"/>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem title="Filter" image="filter" id="EcS-HU-gA8">
-                                <inset key="imageInsets" minX="30" minY="0.0" maxX="0.0" maxY="-11"/>
+                                <inset key="imageInsets" minX="30" minY="0.0" maxX="0.0" maxY="-10"/>
                                 <connections>
                                     <action selector="searchBtn:" destination="Qrd-3H-gtQ" id="2tr-RF-v2x"/>
                                     <segue destination="hVz-LJ-abU" kind="show" id="bFX-Ca-Cd8"/>
@@ -85,34 +92,40 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="2bM-o9-046" customClass="RecommendationsTableViewCell" customModule="GoBoken" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="239" id="2bM-o9-046" customClass="RecommendationsTableViewCell" customModule="GoBoken" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="239"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2bM-o9-046" id="Egh-ez-mYg">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2bM-o9-046" id="Egh-ez-mYg">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="238.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ubg-Sm-tE4">
-                                            <rect key="frame" x="26" y="26" width="125" height="70"/>
+                                            <rect key="frame" x="18" y="11.5" width="340.5" height="190"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="70" id="3ZU-x6-5kU"/>
-                                                <constraint firstAttribute="width" constant="125" id="cxh-ov-uyf"/>
+                                                <constraint firstAttribute="height" constant="190" id="OO1-tc-fje"/>
+                                                <constraint firstAttribute="width" constant="340" id="gX1-JS-EhQ"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Parks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ub-JX-8xo">
-                                            <rect key="frame" x="179" y="51" width="42.5" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Parks" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ub-JX-8xo">
+                                            <rect key="frame" x="18" y="209" width="341" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="Qx6-FF-qmE"/>
+                                                <constraint firstAttribute="width" constant="341" id="X1u-F4-HBz"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="9Ub-JX-8xo" secondAttribute="bottom" constant="10" id="2sK-fY-WBs"/>
-                                        <constraint firstItem="9Ub-JX-8xo" firstAttribute="leading" secondItem="ubg-Sm-tE4" secondAttribute="trailing" constant="30" id="5CB-81-FeG"/>
-                                        <constraint firstItem="ubg-Sm-tE4" firstAttribute="top" secondItem="Egh-ez-mYg" secondAttribute="topMargin" constant="15.26" id="6Cj-SB-7yF"/>
-                                        <constraint firstItem="9Ub-JX-8xo" firstAttribute="top" secondItem="Egh-ez-mYg" secondAttribute="topMargin" id="G9O-3o-Hkm"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="ubg-Sm-tE4" secondAttribute="bottom" constant="14.24" id="MZM-EP-vVb"/>
-                                        <constraint firstItem="ubg-Sm-tE4" firstAttribute="leading" secondItem="Egh-ez-mYg" secondAttribute="leadingMargin" constant="10" id="fJ9-Jd-cbC"/>
+                                        <constraint firstAttribute="trailing" secondItem="9Ub-JX-8xo" secondAttribute="trailing" constant="166.5" id="0OY-ox-h0z"/>
+                                        <constraint firstItem="9Ub-JX-8xo" firstAttribute="top" secondItem="ubg-Sm-tE4" secondAttribute="bottom" constant="11" id="5RO-s8-3Ub"/>
+                                        <constraint firstItem="9Ub-JX-8xo" firstAttribute="top" secondItem="ubg-Sm-tE4" secondAttribute="bottom" constant="11" id="OJ4-mm-zSa"/>
+                                        <constraint firstItem="ubg-Sm-tE4" firstAttribute="leading" secondItem="Egh-ez-mYg" secondAttribute="leadingMargin" constant="2" id="Pga-wL-8Tq"/>
+                                        <constraint firstAttribute="bottom" secondItem="9Ub-JX-8xo" secondAttribute="bottom" constant="7" id="PqG-tS-RFV"/>
+                                        <constraint firstItem="9Ub-JX-8xo" firstAttribute="leading" secondItem="Egh-ez-mYg" secondAttribute="leading" constant="166" id="Z6g-5e-qwp"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="ubg-Sm-tE4" secondAttribute="trailing" constant="1" id="huk-1q-R3b"/>
+                                        <constraint firstItem="ubg-Sm-tE4" firstAttribute="top" secondItem="Egh-ez-mYg" secondAttribute="topMargin" id="s9S-ru-UpB"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -132,6 +145,83 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ov5-dX-f1Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2756" y="1659.2203898050975"/>
+        </scene>
+        <!--Edit Profile-->
+        <scene sceneID="pZH-km-5gs">
+            <objects>
+                <viewController title="Edit Profile" id="WrQ-jM-IDg" customClass="UpdateProfileController" customModule="GoBoken" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rcn-Yv-z2m">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="qGR-cr-0PS">
+                                <rect key="frame" x="87" y="125" width="200" height="207"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="f56-lK-Z1u">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="207"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="0pX-Xt-ZZ6">
+                                                <rect key="frame" x="0.0" y="0.0" width="200" height="132"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m5Y-U7-ld2">
+                                                        <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="SaveProfile:" destination="jeC-lP-sje" eventType="editingDidEnd" id="P4v-n8-CrN"/>
+                                                        </connections>
+                                                    </textField>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iHX-P3-Blc">
+                                                        <rect key="frame" x="0.0" y="52" width="200" height="30"/>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="tpw-Zm-DpV">
+                                                        <rect key="frame" x="0.0" y="104" width="200" height="29"/>
+                                                        <segments>
+                                                            <segment title="Male"/>
+                                                            <segment title="Female"/>
+                                                        </segments>
+                                                        <color key="tintColor" red="0.01096656627" green="0.38371263370000003" blue="0.63495912180000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    </segmentedControl>
+                                                </subviews>
+                                            </stackView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BKN-SW-pR5">
+                                                <rect key="frame" x="0.0" y="172" width="200" height="35"/>
+                                                <color key="backgroundColor" red="0.01096656627" green="0.38371263370000003" blue="0.63495912180000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                                <color key="tintColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <state key="normal" title="Update">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="SaveProfile:" destination="jeC-lP-sje" eventType="touchUpInside" id="PAg-5r-ZnW"/>
+                                                    <action selector="UpdateButtonClicked:" destination="WrQ-jM-IDg" eventType="touchUpInside" id="LY4-Kz-43O"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="GaF-5W-T9N"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="csk-1y-zks"/>
+                    </view>
+                    <connections>
+                        <outlet property="Age" destination="iHX-P3-Blc" id="QGs-0p-9oh"/>
+                        <outlet property="Gender" destination="tpw-Zm-DpV" id="cEb-pR-tFq"/>
+                        <outlet property="Name" destination="m5Y-U7-ld2" id="H3Q-uw-9Hs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Erb-FH-We4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3741" y="1643"/>
         </scene>
         <!--Filter-->
         <scene sceneID="S2Y-PS-pNA">
@@ -213,7 +303,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4I-3F-Fmh">
-                                <rect key="frame" x="157.5" y="532" width="60" height="30"/>
+                                <rect key="frame" x="157.5" y="576" width="60" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="67O-Ii-bec"/>
                                     <constraint firstAttribute="height" constant="30" id="8Y8-r4-XaL"/>
@@ -360,8 +450,11 @@
                                 </connections>
                             </barButtonItem>
                             <barButtonItem title="Item" image="star" id="s1v-vb-qkP"/>
+                            <barButtonItem title="Item" image="user-25" width="1" id="eLB-Oe-k64">
+                                <inset key="largeContentSizeImageInsets" minX="-1" minY="-1" maxX="0.0" maxY="0.0"/>
+                            </barButtonItem>
                             <barButtonItem title="Filter" image="filter" id="XAJ-Mh-DFJ">
-                                <inset key="imageInsets" minX="30" minY="0.0" maxX="0.0" maxY="-11"/>
+                                <inset key="imageInsets" minX="30" minY="0.0" maxX="0.0" maxY="-10"/>
                                 <connections>
                                     <segue destination="hVz-LJ-abU" kind="show" id="AUH-5x-MIs"/>
                                 </connections>
@@ -649,8 +742,9 @@
         <image name="app_logo" width="200" height="200"/>
         <image name="filter" width="50" height="50"/>
         <image name="star" width="32" height="32"/>
+        <image name="user-25" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="AUH-5x-MIs"/>
+        <segue reference="bFX-Ca-Cd8"/>
     </inferredMetricsTieBreakers>
 </document>
