--- a/GoBoken/Main.storyboard
+++ b/GoBoken/Main.storyboard
@@ -81,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s0t-2h-8YG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2756" y="790.25487256371821"/>
+            <point key="canvasLocation" x="2961" y="921"/>
         </scene>
         <!--Recommendations-->
         <scene sceneID="gvg-Xi-Dt9">
@@ -144,7 +144,54 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ov5-dX-f1Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2756" y="1659.2203898050975"/>
+            <point key="canvasLocation" x="2042" y="1704"/>
+        </scene>
+        <!--Tour View Controller-->
+        <scene sceneID="37b-5z-0cA">
+            <objects>
+                <viewController storyboardIdentifier="tourView" id="1nf-q0-696" customClass="TourViewController" customModule="GoBoken" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Fo-Un-cNC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Q2j-Az-Uwj">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qsj-3i-YwG">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <items>
+                                            <navigationItem title="Tour" id="XPn-ie-aMy">
+                                                <barButtonItem key="leftBarButtonItem" title="Back" id="dQK-8A-awa">
+                                                    <connections>
+                                                        <action selector="onBackClicked:" destination="1nf-q0-696" id="1mJ-VO-3dU"/>
+                                                    </connections>
+                                                </barButtonItem>
+                                            </navigationItem>
+                                        </items>
+                                    </navigationBar>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lvj-Ts-qJt">
+                                        <rect key="frame" x="0.0" y="44" width="375" height="603"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Qyz-Cp-aRw" firstAttribute="bottom" secondItem="Q2j-Az-Uwj" secondAttribute="bottom" id="1c5-0w-hrX"/>
+                            <constraint firstItem="Q2j-Az-Uwj" firstAttribute="top" secondItem="Qyz-Cp-aRw" secondAttribute="top" id="cbo-R1-N0S"/>
+                            <constraint firstItem="Q2j-Az-Uwj" firstAttribute="leading" secondItem="Qyz-Cp-aRw" secondAttribute="leading" id="q6a-OL-T2A"/>
+                            <constraint firstItem="Qyz-Cp-aRw" firstAttribute="trailing" secondItem="Q2j-Az-Uwj" secondAttribute="trailing" id="uyt-DY-kAR"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Qyz-Cp-aRw"/>
+                    </view>
+                    <connections>
+                        <outlet property="tourtable" destination="lvj-Ts-qJt" id="C8g-RD-66I"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qcP-kR-TBc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2961" y="1705"/>
         </scene>
         <!--Edit Profile-->
         <scene sceneID="pZH-km-5gs">
@@ -154,9 +201,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="qGR-cr-0PS">
-                                <rect key="frame" x="87" y="125" width="200" height="207"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="qGR-cr-0PS">
+                                <rect key="frame" x="87" y="114" width="200" height="207"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="f56-lK-Z1u">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="207"/>
@@ -208,9 +254,18 @@
                                         </constraints>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="207" id="8oX-SM-az4"/>
+                                    <constraint firstAttribute="width" constant="200" id="sPm-RP-Hif"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="qGR-cr-0PS" firstAttribute="top" secondItem="csk-1y-zks" secondAttribute="top" constant="50" id="8Jc-dG-Uyr"/>
+                            <constraint firstItem="qGR-cr-0PS" firstAttribute="leading" secondItem="csk-1y-zks" secondAttribute="leading" constant="87" id="So8-du-fYy"/>
+                            <constraint firstItem="csk-1y-zks" firstAttribute="trailing" secondItem="qGR-cr-0PS" secondAttribute="trailing" constant="88" id="nVd-tU-8Pc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="csk-1y-zks"/>
                     </view>
                     <connections>
@@ -303,7 +358,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4I-3F-Fmh">
-                                <rect key="frame" x="157.5" y="576" width="60" height="30"/>
+                                <rect key="frame" x="157.5" y="532" width="60" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="67O-Ii-bec"/>
                                     <constraint firstAttribute="height" constant="30" id="8Y8-r4-XaL"/>
@@ -449,9 +504,16 @@
                                     <action selector="SearchTableClicked:" destination="hDJ-Kk-Nft" id="mWc-9j-onG"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem title="Item" image="star" id="s1v-vb-qkP"/>
+                            <barButtonItem title="Item" image="star" id="s1v-vb-qkP">
+                                <connections>
+                                    <segue destination="EBI-hF-E3g" kind="show" id="4QP-I6-slg"/>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem title="Item" image="user-25" width="1" id="eLB-Oe-k64">
                                 <inset key="largeContentSizeImageInsets" minX="-1" minY="-1" maxX="0.0" maxY="0.0"/>
+                                <connections>
+                                    <segue destination="WrQ-jM-IDg" kind="show" id="MW1-Cb-MH1"/>
+                                </connections>
                             </barButtonItem>
                             <barButtonItem title="Filter" image="filter" id="XAJ-Mh-DFJ">
                                 <inset key="imageInsets" minX="30" minY="0.0" maxX="0.0" maxY="-10"/>
@@ -585,7 +647,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dkr-jS-EEL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3737" y="13"/>
+            <point key="canvasLocation" x="3737" y="-76"/>
         </scene>
         <!--Table-->
         <scene sceneID="7E9-GS-Kmx">
@@ -745,6 +807,8 @@
         <image name="user-25" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="bFX-Ca-Cd8"/>
+        <segue reference="AUH-5x-MIs"/>
+        <segue reference="MW1-Cb-MH1"/>
+        <segue reference="4QP-I6-slg"/>
     </inferredMetricsTieBreakers>
 </document>
